# medical-chatbot-assistant

./: .gitignore  OVERVIEW.md  PROJECT_ARCHITECTURE.md  README.md  pyproject.toml  pyrightconfig.json
config/: logging_config.py  settings.py
data/corpus/: corpus.jsonl  corpus_QA.jsonl
data/processed/: enriched_chunks.jsonl
data/test/: test.jsonl
data/val/: val.jsonl
docker/: docker-compose.yml
notebooks/: 01_data_exploration.ipynb
scripts/: evaluate_retrieval.py  ingest_documents.py  process_and_index_corpus.py
scripts/vectorstore/: parent_chunks.db
src/dataset_builder/: contextual_chunker.py  index_builder.py  parent_child_chunker.py  preprocess_bioasq_taskA.py  preprocess_bioasq_taskB.py
src/embeddings/: medcpt_embedder.py
src/retrieval/: keyword_search.py  vector_search.py
src/storage/: parent_store.py  weaviate_client.py
